--- a/views/adminlayouts/header.ejs
+++ b/views/adminlayouts/header.ejs
@@ -73,7 +73,7 @@
         </div>
       </div>
 
-      <!-- search form (Optional)
+       search form (Optional)
       <form action="#" method="get" class="sidebar-form">
         <div class="input-group">
           <input type="text" name="q" class="form-control" placeholder="Search...">
@@ -166,7 +166,7 @@
           </a>
           <ul class="treeview-menu">
             <li><a href="/admin/content/addcontent">Add New Content</a></li>
-            <li><a href="/admin/content/contentlist">View Page</a></li>
+           <!--  <li><a href="/admin/content/contentlist">View Page</a></li> -->
             <li><a href="/admin/content/contentlist">Content List</a></li>
           </ul>
         </li> <li class="treeview">
