--- a/views/admin/category/addcategory.ejs
+++ b/views/admin/category/addcategory.ejs
@@ -27,7 +27,7 @@
             </div> -->
             <!-- /.box-header -->
             <!-- form start -->
-            <form role="form" name="" action="/admin/add-category" method="post">
+            <form role="form" name="" action="/admin/category/add-category" method="post">
               <div class="box-body">
                 <div class="form-group">
                   <label for="exampleInputEmail1">Category Name</label>
