--- a/views/site/subject-wise.ejs
+++ b/views/site/subject-wise.ejs
@@ -23,10 +23,10 @@
 			  </div>
 			  <ul class="nav nav-tabs" id="myTab" role="tablist">
 				  <li class="nav-item">
-				    <a class="nav-link active tabbar_heading" data-toggle="tab" href="#activelink" role="tab" aria-controls="home"><i class="fas fa-chevron-right"></i> Environment</a>
+				    <a class="nav-link active tabbar_heading" id="tab12" data-toggle="tab" href="#activelink" role="tab" aria-controls="home"><i class="fas fa-chevron-right"></i> Environment</a>
 				  </li>
 				  <li class="nav-item">
-				    <a class="nav-link" data-toggle="tab" href="#link1" role="tab" aria-controls="profile"><i class="fas fa-chevron-right"></i> Physics</a>
+				    <a class="nav-link" data-toggle="tab"  id="tab13" href="#link1" role="tab" aria-controls="profile"><i class="fas fa-chevron-right"></i> Physics</a>
 				  </li>
 				  <li class="nav-item">
 				    <a class="nav-link" data-toggle="tab" href="#link2" role="tab" aria-controls="messages"><i class="fas fa-chevron-right"></i> Chemistry</a>
