--- a/views/sitelayouts/footer.ejs
+++ b/views/sitelayouts/footer.ejs
@@ -182,5 +182,16 @@
         })
           });
       </script>
+      <script>
+   
+      //alert('ok');
+     $('#tab12').removeClass('active tabbar_heading');
+     $('#tab13').addClass('active');
+     $('#activelink').removeClass('active');
+     $('#link1').addClass('active');
+     
+
+      </script>
+     
   </body>
 </html>
