--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,7 @@
 				<div id="owl-demo" class="text-center">
 					<div class="item">
 						<div class="section_box">
-						  <a href=""><div class="product_icon">
+						  <a href="/subject-wise"><div class="product_icon" id="physic">
 							<i class="fas fa-user-graduate"></i>
 						  </div><br>
 						  <h5>Physics</h5></a>
@@ -35,7 +35,7 @@
 					</div>
 					<div class="item">
 						<div class="section_box">
-						  <a href=""><div class="product_icon">
+						  <a href="subject-wise"><div class="product_icon">
 							<i class="fas fa-at"></i>
 						  </div><br>
 						  <h5>Chemistry</h5></a>
@@ -43,7 +43,7 @@
 					</div>
 					<div class="item">
 						<div class="section_box">
-						  <a href=""><div class="product_icon">
+						  <a href="subject-wise"><div class="product_icon">
 							<i class="fas fa-at"></i>
 						  </div><br>
 						  <h5>Mathematics</h5></a>
@@ -51,7 +51,7 @@
 					</div>
 					<div class="item">
 						<div class="section_box">
-						  <a href=""><div class="product_icon">
+						  <a href="subject-wise"><div class="product_icon">
 							<i class="fas fa-at"></i>
 						  </div><br>
 						  <h5>Biology</h5></a>
@@ -59,7 +59,7 @@
 					</div>
 					<div class="item">
 						<div class="section_box">
-						  <a href=""><div class="product_icon">
+						  <a href="subject-wise"><div class="product_icon">
 							<i class="fas fa-at"></i>
 						  </div><br>
 						  <h5>History</h5></a>
@@ -67,7 +67,7 @@
 					</div>
 					<div class="item">
 						<div class="section_box">
-						  <a href=""><div class="product_icon">
+						  <a href="subject-wise"><div class="product_icon">
 							<i class="fas fa-at"></i>
 						  </div><br>
 						  <h5>Accounts</h5></a>
@@ -75,7 +75,7 @@
 					</div>
 					<div class="item">
 						<div class="section_box">
-						  <a href=""><div class="product_icon">
+						  <a href="subject-wise"><div class="product_icon">
 							<i class="fas fa-at"></i>
 						  </div><br>
 						  <h5>Business Studies</h5></a>
