--- a/views/sitelayouts/header.ejs
+++ b/views/sitelayouts/header.ejs
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Landing-Page-3</title>
+    <title>Revoedubook</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
