--- a/views/admin/content/addcontent.ejs
+++ b/views/admin/content/addcontent.ejs
@@ -153,7 +153,7 @@ $(document).on('change','#board_id',function(){
       html += '<option value="'+val.id+'">'+val.class_name+'</option>';
     })
       $('#class_id').html(html)
-  })
+  },'json')
 })
 
 $(document).on('change','#class_id',function(){
@@ -164,7 +164,7 @@ $(document).on('change','#class_id',function(){
         html += '<option value="'+val.id+'">'+val.subject_name+'</option>';
       })
         $('#subject_id').html(html)
-    })
+    },'json')
   })
 
 
