--- a/views/admin/content/contentlist.ejs
+++ b/views/admin/content/contentlist.ejs
@@ -12,7 +12,7 @@
         <div class="col-md-8">
           <div class="box box-primary">
             <div class="box-header with-border">
-              <h3 class="box-title">Add Content</h3>
+              <h3 class="box-title">Content List</h3>
             </div>
             <% if (messages.error) { %>
               <p style="color:red"><%- messages.error %></p>
@@ -39,13 +39,13 @@
                 <div class="form-group">
                   <label for="exampleInputPassword1">Select Class</label>
                   <select class="form-control" name="class_id" id="class_id">
-  
+                  <option value=""> Choose Class</option>
                   </select>
                 </div>
                 <div class="form-group">
                   <label for="exampleInputFile">Select Subject</label>
                   <select class="form-control"name="subject_id" id="subject_id" >
-                   
+                    <option value=""> Choose Subject</option>
                     
                   </select>
                 </div>
@@ -53,6 +53,7 @@
                   
                     <label for="exampleInputPassword1">Select Topic</label>
                     <select class="form-control" name="topic_id" id="topic_id">
+                    <option value="">Choose Topic</option>
                     <select>
                   
                 </div>
@@ -80,8 +81,8 @@
               <table class="table table-bordered">
                 <thead >
                   <tr>
-                  <th>Topic</th>
-                  <th>Topic Description</th>
+                  <th>Content Title</th>
+                  <th>Content Description</th>
                   <th style="width: 40px">Action</th>
                 </tr>
               </thead>
@@ -113,29 +114,45 @@ $('#show_content').css('display','none');
 
 
 $(document).on('change','#board_id',function(){
+  $('#class_id').empty();
+  $('#subject_id').empty();
+  $('#topic_id').empty();
+  $('#mytext').empty();
+  $('#mypdf').empty();
+  $('#content_list').empty();
+  $('#mytext').prop('checked', false);
+  $('#mypdf').prop('checked', false);
   var html = '';
   $.get('/admin/class/show_class?id='+$(this).val(),function(res){
     $.each(res,function(key,val){
       html += '<option value="'+val.id+'">'+val.class_name+'</option>';
     })
       $('#class_id').html(html)
-  })
+  },'json')
 })
 
 $(document).on('change','#class_id',function(){
-    
+  $('#subject_id').empty();
+  $('#topic_id').empty();
+  $('#content_list').empty();
+  $('#mytext').prop('checked', false);
+  $('#mypdf').prop('checked', false);
     var html = '';
     $.get('/admin/subject/show_subject?id='+$(this).val(),function(res){
       $.each(res,function(key,val){
         html += '<option value="'+val.id+'">'+val.subject_name+'</option>';
       })
         $('#subject_id').html(html)
-    })
+    },'json')
   })
 
 
 
 $(document).on('change','#subject_id',function(){
+ // $('#topic_id').empty();
+ $('#mytext').prop('checked', false);
+  $('#mypdf').prop('checked', false);
+  $('#content_list').empty();
   var html = '';
   $.get('/admin/topic/show_topic?id='+$(this).val(),function(res){
     $.each(res,function(key,val){
@@ -147,24 +164,38 @@ $(document).on('change','#subject_id',function(){
 $(document).on('click','#mytext',function(){
   var html = '';
   $.get('/admin/content/showfile?id='+$('#topic_id').val(),function(res){
+    if( res == ''){
+    
+     $('#content_list').html('NO DATA FOUND FOR SELECTED TOPIC')
+   
+    }else{
     $.each(res,function(key,val){
       html += '<tr id="dlt'+val.id+'"><td>'+val.content_title+'</td><td>'+val.content_desc+'</td><td><button class="btn btn-info dlsub" data-id="'+val.id+'">Delete</td></tr>';
     })
       $('#content_list').html(html)
-  })
+    }  
+  }, 'json')
 })
 
 $(document).on('click','#mypdf',function(){
   var html = '';
   $.get('/admin/content/showpdf?id='+$('#topic_id').val(),function(res){
+    if( res == ''){
+    
+     $('#content_list').html('NO PDF FOUND FOR SELECTED TOPIC')
+
+    }else{
     $.each(res,function(key,val){
       html += '<tr id="delets'+val.id+'"><td>'+val.content_title+'</td><td><a href="../../assets/uploads/pdf/'+val.file+'" target="_blank">Click Here to See</a></td><td><button class="btn btn-info blsub" data-id="'+val.id+'">Delete</td></tr>';
     })
       $('#content_list').html(html)
-  })
+    }  
+  },'json')
 })
 
 $(document).on('click','.dlsub',function(){
+  var x = confirm("Are You Sure!");
+ if(x == true){
   var a =$(this)
   $.get('/admin/content/delete?id='+$(this).data('id'),function(res){
     alert(res.message)
@@ -173,10 +204,16 @@ $(document).on('click','.dlsub',function(){
     }
 
   },'json')
+}else{
+
+ return false; 
+}
 })
 
 
 $(document).on('click','.blsub',function(){
+ var y = confirm("Are You Sure!");
+ if(y == true){
   var a =$(this)
   $.get('/admin/content/delete?id='+$(this).data('id'),function(res){
     alert(res.message)
@@ -185,5 +222,10 @@ $(document).on('click','.blsub',function(){
     }
 
   },'json')
+  }else{
+
+ return false; 
+}
+
 })
 </script>
