--- a/views/admin/topic/addtopic.ejs
+++ b/views/admin/topic/addtopic.ejs
@@ -84,7 +84,7 @@ $(document).on('change','#board_id',function(){
       html += '<option value="'+val.id+'">'+val.class_name+'</option>';
     })
       $('#class_id').html(html)
-  })
+  },'json')
 })
 
 $(document).on('change','#class_id',function(){
