--- a/views/admin/content/contentlist.ejs
+++ b/views/admin/content/contentlist.ejs
@@ -24,43 +24,31 @@
    
               <div class="box-body">
                 <div class="form-group">
-                  <label for="exampleInputEmail1">Choose Board</label>
-                  <select class="form-control" name="board_id" id="board_id">
-                    <option disabled selected> Choose Board</option>
+                  <label for="exampleInputEmail1">Choose Class</label>
+                  <select class="form-control" name="class_id" id="class_id">
+                    <option disabled selected> Choose Class</option>
                     <% if (locals.data) {
                         %>
                     <% locals.data.forEach(function(cl){
                         %>
-                    <option value="<%= cl.id %>"><%= cl.board_name %></option>
+                    <option value="<%= cl.id %>"><%= cl.class_name %></option>
                     <% }) %>
                     <% } %>
                   </select>
                 </div>
                 <div class="form-group">
-                  <label for="exampleInputPassword1">Select Class</label>
-                  <select class="form-control" name="class_id" id="class_id">
-                  <option value=""> Choose Class</option>
+                  <label for="exampleInputPassword1">Select Subject</label>
+                  <select class="form-control" name="subject_id" id="subject_id">
+                  <option value="">Choose Subject</option>
                   </select>
                 </div>
                 <div class="form-group">
-                  <label for="exampleInputFile">Select Subject</label>
-                  <select class="form-control"name="subject_id" id="subject_id" >
-                    <option value=""> Choose Subject</option>
+                  <label for="exampleInputFile">Select Topic</label>
+                  <select class="form-control"name="topic_id" id="topic_id" >
+                    <option value=""> Choose Topic</option>
                     
                   </select>
                 </div>
-                <div class="form-group">
-                  
-                    <label for="exampleInputPassword1">Select Topic</label>
-                    <select class="form-control" name="topic_id" id="topic_id">
-                    <option value="">Choose Topic</option>
-                    <select>
-                  
-                </div>
-               <!--  <div class="form-group">
-                  <label for="exampleInputEmail1">Content Title</label>
-                  <input type="text" name="my_title" class="form-control" required="true" placeholder="Enter Content Title">
-                </div> -->
                 <div class="form-group">
                   <label for="exampleInputEmail1">Choose File Type</label>&nbsp;
                   <input type="radio" name="filetype" id="mytext" value="0" >Text&nbsp;
@@ -113,8 +101,8 @@ $('#show_content').css('display','none');
 });
 
 
-$(document).on('change','#board_id',function(){
-  $('#class_id').empty();
+$(document).on('change','#class_id',function(){
+  
   $('#subject_id').empty();
   $('#topic_id').empty();
   $('#mytext').empty();
@@ -123,28 +111,28 @@ $(document).on('change','#board_id',function(){
   $('#mytext').prop('checked', false);
   $('#mypdf').prop('checked', false);
   var html = '';
-  $.get('/admin/class/show_class?id='+$(this).val(),function(res){
+  $.get('/admin/content/show_subject?id='+$(this).val(),function(res){
     $.each(res,function(key,val){
-      html += '<option value="'+val.id+'">'+val.class_name+'</option>';
+      html += '<option value="'+val.id+'">'+val.subject_name+'</option>';
     })
-      $('#class_id').html(html)
+      $('#subject_id').html(html)
   },'json')
 })
 
-$(document).on('change','#class_id',function(){
-  $('#subject_id').empty();
-  $('#topic_id').empty();
-  $('#content_list').empty();
-  $('#mytext').prop('checked', false);
-  $('#mypdf').prop('checked', false);
-    var html = '';
-    $.get('/admin/subject/show_subject?id='+$(this).val(),function(res){
-      $.each(res,function(key,val){
-        html += '<option value="'+val.id+'">'+val.subject_name+'</option>';
-      })
-        $('#subject_id').html(html)
-    },'json')
-  })
+// $(document).on('change','#class_id',function(){
+//   $('#subject_id').empty();
+//   $('#topic_id').empty();
+//   $('#content_list').empty();
+//   $('#mytext').prop('checked', false);
+//   $('#mypdf').prop('checked', false);
+//     var html = '';
+//     $.get('/admin/subject/show_subject?id='+$(this).val(),function(res){
+//       $.each(res,function(key,val){
+//         html += '<option value="'+val.id+'">'+val.subject_name+'</option>';
+//       })
+//         $('#subject_id').html(html)
+//     },'json')
+//   })
 
 
 
@@ -154,13 +142,20 @@ $(document).on('change','#subject_id',function(){
   $('#mypdf').prop('checked', false);
   $('#content_list').empty();
   var html = '';
-  $.get('/admin/topic/show_topic?id='+$(this).val(),function(res){
+  $.get('/admin/content/show_topic_name?id='+$(this).val() + '&vid='+$('#class_id').val(),function(res){
     $.each(res,function(key,val){
       html += '<option value="'+val.id+'">'+val.topic_name+'</option>';;
     })
       $('#topic_id').html(html)
   })
 })
+
+$(document).on('change','#topic_id',function(){
+$('#mytext').prop('checked', false);
+  $('#mypdf').prop('checked', false);
+   $('#content_list').empty();
+});  
+
 $(document).on('click','#mytext',function(){
   var html = '';
   $.get('/admin/content/showfile?id='+$('#topic_id').val(),function(res){
