--- a/views/admin/subjects/addsubject.ejs
+++ b/views/admin/subjects/addsubject.ejs
@@ -21,29 +21,22 @@ including header content which is common for all pages
       <% } %>
 
       <form class="form-horizontal" action="/admin/subject/addsubject" method="post" name="form2">
-            <div class="form-group">
-              <label class="control-label col-sm-2" for="class_name">Board Name:</label>
+           <!--  <div class="form-group">
+              <label class="control-label col-sm-2" for="class_id">Select Class</label>
               <div class="col-sm-10">
-                <select class="form-control" name="board_id" id="board_id">
-                  <option disabled selected> choose board</option>
-                  <% if (locals.data) {
-                      %>
-                  <% locals.data.forEach(function(cl){
-                      %>
-                  <option value="<%= cl.id %>"><%= cl.board_name %></option>
-                  <% }) %>
-                  <% } %>
+              <select class="form-control" name="class_id">
+                <option disabled selected> Choose Class</option>
+                <% if (locals.data) {
+                    %>
+                <% locals.data.forEach(function(cl){
+                    %>
+                <option value="<%= cl.id %>"><%= cl.class_name %></option>
+                <% }) %>
+                <% } %>
                 </select>
-            </div>
-           </div>
-           <div class="form-group">
-             <label class="control-label col-sm-2" for="class_name">Choose Class:</label>
-             <div class="col-sm-10">
-               <select class="form-control" name="class_id" id="class_id">
+              </div>
+            </div> -->
 
-               </select>
-           </div>
-          </div>
           <div class="form-group">
             <label class="control-label col-sm-2" for="class_name">Subject Name:</label>
             <div class="col-sm-10">
@@ -63,14 +56,4 @@ including header content which is common for all pages
 including footer content which is common for all pages
 -->
 <%- include ../../adminlayouts/footer.ejs %>
-<script>
-$(document).on('change','#board_id',function(){
-  var html = '';
-  $.get('/admin/class/show_class?id='+$(this).val(),function(res){
-    $.each(res,function(key,val){
-      html += '<option value="'+val.id+'">'+val.class_name+'</option>';
-    })
-      $('#class_id').html(html)
-  })
-})
-</script>
+
