--- a/views/admin/subjects/subjectlist.ejs
+++ b/views/admin/subjects/subjectlist.ejs
@@ -5,71 +5,67 @@ including header content which is common for all pages
 <div class="content-wrapper">
     <section class="content-header">
         <h1>
-          Subjects Management
+          Subject Management
         </h1>
     </section>
+    <section class="content">
     <div class="row">
+        <div class="col-md-8">
+          <div class="box box-primary">
+            <!-- <div class="box-header with-border">
+              <h3 class="box-title">Subject List</h3>
+            </div> -->
+            <% if (messages.error) { %>
+              <p style="color:red"><%- messages.error %></p>
+          <% } %>
     
-
-    <div class="row">
-      <div class="col-md-8">
-        <div class="row">
-          <div class="col-md-6">
-            <select class="form-control" name="board_id" id="board_id">
-              <option disabled selected> choose board</option>
-              <% if (locals.data) {
-                  %>
-              <% locals.data.forEach(function(cl){
-                  %>
-              <option value="<%= cl.id %>"><%= cl.board_name %></option>
-              <% }) %>
-              <% } %>
-            </select>
-          </div>
-          <div class="col-md-6">
-            <select class="form-control" name="class_id" id="class_id">
+          <% if (messages.success) { %>
+              <p style="color:green"><%- messages.success %></p>
+          <% } %>
+   
+              <!-- <div class="box-body">
+                
+                <div class="form-group">
+                  <label for="exampleInputPassword1">Select Class</label>
+                  <select class="form-control" name="class_id" id="class_id">
+                    <option disabled selected>Choose Class</option>
+                  <% if (locals.data) {
+                        %>
+                    <% locals.data.forEach(function(cl){
+                        %>
+                    <option value="<%= cl.id %>"><%= cl.class_name %></option>
+                    <% }) %>
+                    <% } %>
+                  </select>
+                </div>
               
-            </select>
-          </div>
-        </div>
-
-        <br><br>
-
-        <div class="box">
+              </div> -->
+         
+    <div class="box" >
             <div class="box-body">
               <table class="table table-bordered">
-                <thead>
+                <thead >
                   <tr>
                   <th>Subject</th>
-                  <th style="width: 40px">Action</th>
+                  <th style="width: 20px">Action</th>
                 </tr>
               </thead>
               <tbody id="subject_list">
-              </tody>
+              </tbody>
             </table>
             </div>
           </div>
-      </div>
+</div>
+</section>
+ </div>
+        </div>
     </div>
-
-    </div>
-  </div>
-
 <!--
 including footer content which is common for all pages
 -->
 <%- include ../../adminlayouts/footer.ejs %>
 <script>
-$(document).on('change','#board_id',function(){
-  var html = '';
-  $.get('/admin/class/show_class?id='+$(this).val(),function(res){
-    $.each(res,function(key,val){
-      html += '<option value="'+val.id+'">'+val.class_name+'</option>';
-    })
-      $('#class_id').html(html)
-  },'json')
-})
-$(document).on('change','#class_id',function(){
+$(document).ready(function(){
   var html = '';
   $.get('/admin/subject/show_subject?id='+$(this).val(),function(res){
     $.each(res,function(key,val){
