--- a/views/admin/topic/topic-list.ejs
+++ b/views/admin/topic/topic-list.ejs
@@ -27,32 +27,25 @@ including header content which is common for all pages
          
             <div class="box-body">
               <div class="form-group">
-                <label for="exampleInputEmail1">Choose Board</label>
-                <select class="form-control" name="board_id" id="board_id">
-                  <option disabled selected> Choose Board</option>
+                <label for="exampleInputEmail1">Choose Class</label>
+                <select class="form-control" name="class_id" id="class_id">
+                  <option disabled selected> Choose Class</option>
                   <% if (locals.data) {
                       %>
                   <% locals.data.forEach(function(cl){
                       %>
-                  <option value="<%= cl.id %>"><%= cl.board_name %></option>
+                  <option value="<%= cl.id %>"><%= cl.class_name %></option>
                   <% }) %>
                   <% } %>
                 </select>
               </div>
               <div class="form-group">
-                <label for="exampleInputPassword1">Select Class</label>
-                <select class="form-control" name="class_id" id="class_id">
+                <label for="exampleInputPassword1">Select Subject</label>
+                <select class="form-control" name="subject_id" id="subject_id">
 
                 </select>
               </div>
-              <div class="form-group">
-                <label for="exampleInputFile">Select Subject(Please change the subject to see related Topics )</label>
-                <select class="form-control"name="subject_id" id="subject_id" >
-                 
-                  
-                </select>
-              </div>
-             
+            
             </div>
          
        
@@ -75,7 +68,8 @@ including header content which is common for all pages
               <table class="table table-bordered">
                 <thead>
                   <tr>
-                  <th>Topic</th>
+                   
+                  <th>Topics</th>
                   <th>Topic Description</th>
                   <th style="width: 40px">Action</th>
                 </tr>
@@ -93,26 +87,26 @@ including footer content which is common for all pages
 -->
 <%- include ../../adminlayouts/footer.ejs %>
 <script>
-$(document).on('change','#board_id',function(){
+$(document).on('change','#class_id',function(){
   var html = '';
-  $.get('/admin/class/show_class?id='+$(this).val(),function(res){
+  $.get('/admin/topic/show_subject?id='+$(this).val(),function(res){
     $.each(res,function(key,val){
-      html += '<option value="'+val.id+'">'+val.class_name+'</option>';
+      html += '<option value="'+val.id+'">'+val.subject_name+'</option>';
     })
-      $('#class_id').html(html)
+      $('#subject_id').html(html)
   },'json')
 })
 
-$(document).on('change','#class_id',function(){
+// $(document).on('change','#class_id',function(){
     
-    var html = '';
-    $.get('/admin/subject/show_subject?id='+$(this).val(),function(res){
-      $.each(res,function(key,val){
-        html += '<option value="'+val.id+'">'+val.subject_name+'</option>';
-      })
-        $('#subject_id').html(html)
-    },'json')
-  })
+//     var html = '';
+//     $.get('/admin/subject/show_subject?id='+$(this).val(),function(res){
+//       $.each(res,function(key,val){
+//         html += '<option value="'+val.id+'">'+val.subject_name+'</option>';
+//       })
+//         $('#subject_id').html(html)
+//     },'json')
+//   })
 
 
 
@@ -122,7 +116,7 @@ $(document).on('change','#class_id',function(){
 
 $(document).on('change','#subject_id',function(){
   var html = '';
-  $.get('/admin/topic/show_topic?id='+$(this).val(),function(res){
+  $.get('/admin/topic/show_topic?id='+$(this).val() + '&vid='+$('#class_id').val(),function(res){
     $.each(res,function(key,val){
       html += '<tr id="topic_delete'+val.id+'"><td>'+val.topic_name+'</td><td>'+val.description+'</td><td><button class="btn btn-info dlsub" data-id="'+val.id+'">Delete</td></tr>';
     })
@@ -130,7 +124,7 @@ $(document).on('change','#subject_id',function(){
   })
 })
 $(document).on('click','.dlsub',function(){
-  var x = confirm("Are You Sure!");
+  var x = confirm("Are You Sure!!");
   if(x == true){
   var a =$(this)
   $.get('/admin/topic/delete?id='+$(this).data('id'),function(res){
