--- a/views/site/class-wise.ejs
+++ b/views/site/class-wise.ejs
@@ -72,39 +72,46 @@
 							 <% locals.data.subject.forEach(function(cat){%>
 						      
 							   <% if(locals.data.current_subs == cat.id) { %>
-							<a href=""><%= cat.class_name %></a>
+							<a href="" id="myids" data-custom-value="<%= cat.id %>"><%= cat.class_name %></a>
 								<% }%> 
 							  
 							  <% }) %>
+
+							  <select id="subjectdrp" style="margin-left: 265px;">
+                          	 <option value="">Choose Subject</option>
+                          	<% if (locals.data.mysubject) {
+
+			                      %>
+			                   <% locals.data.mysubject.forEach(function(cat){
+
+			                       %>
+						   
+						     <option value="<%= cat.id %>"><%= cat.subject_name %></option>
+                            <% }) %>
+			                <% } %>
+					    </select>  
 							  
 						</div>
 					  	<div class="text-center mb-2">
-					  		<div class="form-row">
-					  			 <% if (locals.data.topic) {
+					  		<div class="form-row" id="current_topic">
+					  		  
+					  		   <% if (locals.data.mysubject) {
 
 			                      %>
-			                   <% locals.data.topic.forEach(function(cat){
+			                   <% locals.data.mysubject.forEach(function(cat){
 
 			                       %>
-						  		<div class="col-md-4 col-sm-6 col-lg-3">
+								<div class="col-md-4 col-sm-6 col-lg-3">
 									<div class="subject_box">
-									  <a href=""><div class="subject_icon">
+									  <a href="#/" id="myhide" data-value="<%= cat.id %>"><div class="subject_icon">
 										<i class="fas fa-at"></i>
 									  </div><br>
-									  <h5><%= cat.topic_name %></h5></a>
+									  <h5><%= cat.subject_name %></h5></a>
 									</div>
 								</div>
 								<% }) %>
-			                    <% } %>
-								<!-- <div class="col-md-4 col-sm-6 col-lg-3">
-									<div class="subject_box">
-									  <a href=""><div class="subject_icon">
-										<i class="fas fa-at"></i>
-									  </div><br>
-									  <h5>Chemistry</h5></a>
-									</div>
-								</div>
-								<div class="col-md-4 col-sm-6 col-lg-3">
+			                     <% } %>
+						<!-- 		<div class="col-md-4 col-sm-6 col-lg-3">
 									<div class="subject_box">
 									  <a href=""><div class="subject_icon">
 										<i class="fas fa-at"></i>
@@ -179,7 +186,7 @@
 							</div>
 						</div>
 					</div>
-				  <div class="tab-pane" id="link1" role="tabpanel">
+				<!--   <div class="tab-pane" id="link1" role="tabpanel">
 					<div class="main_title">
 						<a href="">Class X</a>
 					</div>
@@ -275,7 +282,7 @@
 							</div>
 						</div>
 					</div>
-				  </div>
+				  </div> -->
 				  <div class="tab-pane" id="link2" role="tabpanel">XI</div>
 				  <div class="tab-pane" id="link3" role="tabpanel">XII</div>
 				  <div class="tab-pane" id="link4" role="tabpanel">B.Sc</div>
@@ -286,3 +293,66 @@
 		</div>
 	</div>
 <%- include ../sitelayouts/footer.ejs %>
+<script type="text/javascript">
+   	$(document).on('change','#subjectdrp',function(){
+   // alert('ok');
+    var html = '';
+  $.get('selectsubject?id='+$(this).val() + '&sid='+$('#myids').data("custom-value"),function(res){
+   $.each(res,function(key,val){
+      html += '<div class="col-md-6 col-sm-6 col-lg-3">';
+      html += '<div class="subject_box" >';
+      html += '<a href="#/">';
+      html += '<div class="subject_icon" data-value =' + val.id + ' >';
+      html += '<i class="fas fa-at"></i>';
+      html += '</div><br>';
+      html += '<h5>'+ val.topic_name + '</h5>';
+      html += '</a>';
+      html += '</div>';
+      html += '</div>';
+    })
+      $('#current_topic').html(html)
+    
+  },'json')
+
+})
+$(document).on('click','.subject_icon', function(){
+
+ var html = '';
+  $.get('selectdesc?id='+$(this).data("value"),function(res){
+   $.each(res,function(key,val){
+     
+      html += '<h5>'+ val.description + '</h5>';
+    
+    
+    })
+      $('#current_topic').html(html)
+    
+  },'json')
+
+  })   
+	
+$(document).on('click','#myhide', function(){
+//  alert('ok');
+var html = '';
+  $.get('selectsubject?id='+$(this).data("value") + '&sid='+$('#myids').data("custom-value"),function(res){
+   $.each(res,function(key,val){
+      html += '<div class="col-md-6 col-sm-6 col-lg-3">';
+      html += '<div class="subject_box" >';
+      html += '<a href="#/">';
+      html += '<div class="subject_icon" data-value =' + val.id + '>';
+      html += '<i class="fas fa-at"></i>';
+      html += '</div><br>';
+      html += '<h5>'+ val.topic_name + '</h5>';
+      html += '</a>';
+      html += '</div>';
+      html += '</div>';
+    })
+      $('#current_topic').html(html)
+    
+  },'json')
+
+})
+
+
+	
+   </script> 	
