--- a/views/site/subject-wise.ejs
+++ b/views/site/subject-wise.ejs
@@ -14,6 +14,7 @@
 				    <ol class="breadcrumb">
 				      <li class="breadcrumb-item"><a href="/">Home</a></li>
 				      <li class="breadcrumb-item active" aria-current="page">Subject Wise</li>
+				      <li><%= locals.data.current_drop %></li>
 				    </ol>
 				</nav>
 			</div>
@@ -68,135 +69,136 @@
 			  	<a href=""><i class="fas fa-chevron-right"></i> Sub Heading-3</a>
 			  </div-->
 			  <div class="filter_bar">
-			  	<a href="class-wise"><i class="fas fa-chevron-right"></i> Class Wise</a>
-			  	<a href="board-material"><i class="fas fa-chevron-right"></i> Study Material By Board</a>
+			  		<% if (locals.data.education) { %>
+			     <% locals.data.education.forEach(function(cat){%>
+			  	<a href="class-wise"><i class="fas fa-chevron-right"></i><%= cat.name %></a>
+
+			  	<!-- <a href="board-material"><i class="fas fa-chevron-right"></i> Study Material By Board</a>
 			  	<a href="entranc-exam"><i class="fas fa-chevron-right"></i> Extrance Exam Wise</a>
 			  	<a href="#"><i class="fas fa-chevron-right"></i> GOVT. Exam Wise</a>
 			  	<a href="#"><i class="fas fa-chevron-right"></i> UR Interset Wise</a>
 				<a href="#"><i class="fas fa-chevron-right"></i> Engineering Study Material</a>
-				<a href="#"><i class="fas fa-chevron-right"></i> Medical Study Material</a>
+				<a href="#"><i class="fas fa-chevron-right"></i> Medical Study Material</a> -->
+				<% }) %>
+                <% } %>
 			  </div>
 			</div>
 			<div class="col-md-4 col-sm-8 col-xl-9">
 				<div class="tab-content">
-					
+					 
 					<div class="tab-pane active" id="" role="tabpanel">
 						<div class="main_title">
+                           
 							 <% locals.data.subject.forEach(function(cat){%>
 						      
 							   <% if(locals.data.current_subs == cat.id) { %>
-							   		<a href=""><%= cat.subject_name %></a> 
+							   		<a href="#/" id="myid"  data-custom-value="<%= cat.id %>"><%= cat.subject_name %></a> 
 							   		<% }%> 
 							  
 							  <% }) %>
 							  
-						</div>
-					
-
-					  	<div class="text-center mb-2">
-					  		<div class="form-row">
-					  			 <% if (locals.data.topic) {
+                          <select id="data" style="margin-left: 265px;">
+                          	 <option value="">Choose Class</option>
+                          	<% if (locals.data.myclass) {
 
 			                      %>
-			                   <% locals.data.topic.forEach(function(cat){
+			                   <% locals.data.myclass.forEach(function(cat){
 
 			                       %>
-								<div class="col-md-6 col-sm-6 col-lg-3">	
-									<div class="subject_box">
-									  <a href="#"><div class="subject_icon">
-										<i class="fas fa-at"></i>
-									  </div><br>
-									  <h5><%= cat.topic_name %></h5></a>
-									</div>
-								</div>
-								<% }) %>
-			                    <% } %>
-						  		
-								<!-- <div class="col-md-6 col-sm-6 col-lg-3">	
-									<div class="subject_box">
-									  <a href="subject_subcategory"><div class="subject_icon">
-										<i class="fas fa-at"></i>
-									  </div><br>
-									  <h5>Gravtiation</h5></a>
-									</div>
-								</div>
-								<div class="col-md-6 col-sm-6 col-lg-3">	
-									<div class="subject_box">
-									  <a href=""><div class="subject_icon">
-										<i class="fas fa-at"></i>
-									  </div><br>
-									  <h5>Magnetism</h5></a>
-									</div>
-								</div>
-								<div class="col-md-6 col-sm-6 col-lg-3">	
-									<div class="subject_box">
-									  <a href=""><div class="subject_icon">
-										<i class="fas fa-at"></i>
-									  </div><br>
-									  <h5>Atoms</h5></a>
-									</div>
-								</div>
-								<div class="col-md-6 col-sm-6 col-lg-3">	
-									<div class="subject_box">
-									  <a href=""><div class="subject_icon">
-										<i class="fas fa-at"></i>
-									  </div><br>
-									  <h5>Chemical</h5></a>
-									</div>
-								</div> -->
+						   
+						     <option value="<%= cat.id %>" <%= locals.data.current_drop == cat.id ? 'selected' : '' %>><%= cat.class_name %></option>
+                            <% }) %>
+			                <% } %>
+					    </select>
+                       	</div>
+					
+                           
+					  	<div class="text-center mb-2">
+					  		<div class="form-row" id="current_topic">
+					  			
 							</div>
+						
+					
+				 	<div id="owl-demo" class="text-center">   
+				 	        <% if (locals.data.bigclass) {%>
+			                   <% locals.data.bigclass.forEach(function(cat){%>     
+							<div class="item">
+								<div class="section_box">
+								  <a href="#/" id="myhide"><div class="product_icon"  data-value="<%= cat.id %>">
+									<i class="fas fa-at"></i>
+								  </div><br>
+								  
+								  <h5><%= cat.class_name %></h5></a>
+								</div>
+							</div>
+							 <% }) %>
+			                <% } %>
+			            </div>
+			                <div id="owl-demo" class="text-center">   
+				 	        <% if (locals.data.topics) {%>
+			                   <% locals.data.topics.forEach(function(cat){%>     
+							<div class="item">
+								<div class="section_box">
+								  <a href="#/" id="myhide"><div class="product_icon"  data-value="<%= cat.id %>">
+									<i class="fas fa-at"></i>
+								  </div><br>
+								  
+								  <h5><%= cat.topic_name %></h5></a>
+								</div>
+							</div>
+							 <% }) %>
+			                <% } %>
+						<!-- 	<div class="item">
+								<div class="section_box">
+								  <a href=""><div class="product_icon">
+									<i class="fas fa-at"></i>
+								  </div><br>
+								  <h5>X</h5></a>
+								</div>
+							</div>
+							<div class="item">
+								<div class="section_box">
+								  <a href=""><div class="product_icon">
+									<i class="fas fa-at"></i>
+								  </div><br>
+								  <h5>XI</h5></a>
+								</div>
+							</div>
+							<div class="item">
+								<div class="section_box">
+								  <a href=""><div class="product_icon">
+									<i class="fas fa-at"></i>
+								  </div><br>
+								  <h5>XII</h5></a>
+								</div>
+							</div>
+							<div class="item">
+								<div class="section_box">
+								  <a href=""><div class="product_icon">
+									<i class="fas fa-at"></i>
+								  </div><br>
+								  <h5>B.Sc</h5></a>
+								</div>
+							</div>
+							<div class="item">
+								<div class="section_box">
+								  <a href=""><div class="product_icon">
+									<i class="fas fa-at"></i>
+								  </div><br>
+								  <h5>BCA</h5></a>
+								</div>
+							</div>
+							<div class="item">
+								<div class="section_box">
+								  <a href=""><div class="product_icon">
+									<i class="fas fa-at"></i>
+								  </div><br>
+								  <h5>BA</h5></a>
+								</div>
+							</div>	 -->	
 						</div>
-					</div>
-				<!--   <div class="tab-pane" id="link1" role="tabpanel">
-					<div class="main_title">
-						<a href="">Physics</a>
-					</div>
-					<div class="text-center mb-2">
-						<div class="form-row">
-							<div class="col-md-6 col-sm-6 col-lg-4">	
-								<div class="subject_box">
-								  <a href=""><div class="subject_icon">
-									<i class="fas fa-at"></i>
-								  </div><br>
-								  <h5>Force</h5></a>
-								</div>
-							</div>
-							<div class="col-md-6 col-sm-6 col-lg-4">	
-								<div class="subject_box">
-								  <a href=""><div class="subject_icon">
-									<i class="fas fa-at"></i>
-								  </div><br>
-								  <h5>Gravtiation</h5></a>
-								</div>
-							</div>
-							<div class="col-md-6 col-sm-6 col-lg-4">	
-								<div class="subject_box">
-								  <a href=""><div class="subject_icon">
-									<i class="fas fa-at"></i>
-								  </div><br>
-								  <h5>Magnetism</h5></a>
-								</div>
-							</div>
-							<div class="col-md-6 col-sm-6 col-lg-4">	
-								<div class="subject_box">
-								  <a href=""><div class="subject_icon">
-									<i class="fas fa-at"></i>
-								  </div><br>
-								  <h5>Atoms</h5></a>
-								</div>
-							</div>
-							<div class="col-md-6 col-sm-6 col-lg-4">	
-								<div class="subject_box">
-								  <a href=""><div class="subject_icon">
-									<i class="fas fa-at"></i>
-								  </div><br>
-								  <h5>Chemical</h5></a>
-								</div>
-							</div>
-						</div>
-					</div>
-				  </div> -->
-				 <!--  <div class="tab-pane" id="link2" role="tabpanel">.3..</div>
+                 </div>
+				<!--   <div class="tab-pane" id="link2" role="tabpanel">.3..</div>
 				  <div class="tab-pane" id="link3" role="tabpanel">.4..</div>
 				  <div class="tab-pane" id="link4" role="tabpanel">.5..</div>
 				  <div class="tab-pane" id="link5" role="tabpanel">.6..</div>
@@ -205,11 +207,109 @@
 				  <div class="tab-pane" id="link8" role="tabpanel">.9..</div>
 				  <div class="tab-pane" id="link9" role="tabpanel">.10..</div>
 				  <div class="tab-pane" id="link10" role="tabpanel">.11..</div> -->
+				  </div>
 				</div>
 			</div>
 			
 		</div>
 	</div>
-
+    
     <%- include ../sitelayouts/footer.ejs %>
-    	
+   <script type="text/javascript">
+   	$(document).on('change','#data',function(){
+     $('#owl-demo').hide();
+    var html = '';
+  $.get('selectclass?id='+$(this).val() + '&sid='+$('#myid').data("custom-value"),function(res){
+  	location.reload()
+   // $.each(res,function(key,val){
+   //    html += '<div class="col-md-6 col-sm-6 col-lg-3">';
+   //    html += '<div class="subject_box" >';
+   //    html += '<a href="#/">';
+   //    html += '<div class="subject_icon" data-value =' + val.id + ' >';
+   //    html += '<i class="fas fa-at"></i>';
+   //    html += '</div><br>';
+   //    html += '<h5>'+ val.topic_name + '</h5>';
+   //    html += '</a>';
+   //    html += '</div>';
+   //    html += '</div>';
+   //  })
+   //    $('#current_topic').html(html)
+    
+  },'json')
+
+})
+// $(document).on('click','.subject_icon', function(){
+
+//  var html = '';
+//   $.get('selectdesc?id='+$(this).data("value"),function(res){
+//    $.each(res,function(key,val){
+     
+//       html += '<h5>'+ val.description + '</h5>';
+    
+    
+//     })
+//       $('#current_topic').html(html)
+    
+//   },'json')
+	
+// })   
+
+$(document).on('click','.product_icon', function(){
+ $('#owl-demo').hide();
+// alert('k');
+var html = '';
+  $.get('selectclass?id='+$(this).data("value") + '&sid='+$('#myid').data("custom-value"),function(res){
+   $.each(res,function(key,val){
+      html += '<div class="col-md-6 col-sm-6 col-lg-3">';
+      html += '<div class="subject_box" >';
+      html += '<a href="#/">';
+      html += '<div class="subject_icon" data-value =' + val.id + '>';
+      html += '<i class="fas fa-at"></i>';
+      html += '</div><br>';
+      html += '<h5>'+ val.topic_name + '</h5>';
+      html += '</a>';
+      html += '</div>';
+      html += '</div>';
+    })
+      $('#current_topic').html(html)
+    
+  },'json')
+
+})
+
+// $(document).on('click','#tab12' , function(){
+// $('#owl-demo').hide();
+
+//    var vrifg = $('#data').children("option:selected").val();
+//     if(vrifg!==''){
+//    var html = '';
+//   $.get('selectclass?id='+$('#data').children("option:selected").val() + '&sid='+$('#myid').data("custom-value"),function(res){
+//    $.each(res,function(key,val){
+//       html += '<div class="col-md-6 col-sm-6 col-lg-3">';
+//       html += '<div class="subject_box" >';
+//       html += '<a href="#/">';
+//       html += '<div class="subject_icon">';
+//       html += '<i class="fas fa-at"></i>';
+//       html += '</div><br>';
+//       html += '<h5>'+ val.topic_name + '</h5>';
+//       html += '</a>';
+//       html += '</div>';
+//       html += '</div>';
+//     })
+//       $('#current_topic').html(html)
+    
+//   },'json')
+// }else{
+
+
+
+// }
+
+
+
+// })
+
+
+
+ 
+   </script> 	
